# guidebook-fs-search

./: .gitignore  Cargo.toml  README.md  build.sh  config.yml
src/: config.rs  error.rs  index.rs  indexer_worker.rs  main.rs  webserver.rs  websrc.rs
src/index/: mod.rs  tantivy_backend.rs
web/: index.html  index.tsx  package-lock.json  package.json
web/src/: api.ts  index.html
web/src/views/: App.tsx
