[package]
name = "guidebook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tantivy = "0.16.1"
serde_json = "1.0.79"
serde = "1.0.136"
thiserror = "1.0.30"
lmdb-zero = "0.4.4"
serde_yaml = "0.8.23"

[[bin]]
name = "guidebook-fs-search"
path = "src/main.rs"
